# Mining-sentiment

./: LICENSE  README.md  main.py  pyproject.toml  vader_dataset_sentiment.csv
src/: CustomDataset.py  model.py  preprocessing.py  trains_eval.py
