[project]
name = "project_skripsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "emoji>=2.15.0",
    "imblearn>=0.0",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tokenizers>=0.22.2",
    "transformers>=5.0.0",
]
